# Veridoc-2

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  veridoc-roadmap.md
Veridoc/: app.py  main.py  test.py
Veridoc/chroma_vectorestore/: chroma.sqlite3
Veridoc/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
Veridoc/frontend/src/: App.jsx  index.css
Veridoc/frontend/src/components/: AppSidebar.jsx  Logo.jsx  ThemeToggle.jsx
Veridoc/frontend/src/components/auth/: ProtectedRoute.jsx  PublicRoute.jsx
Veridoc/frontend/src/context/: ThemeContext.jsx
Veridoc/frontend/src/pages/: DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  Profile.jsx  Settings.jsx
Veridoc/frontend/src/services/: api.js  authService.js  userService.js
Veridoc/images/: .gitkeep
backend/: app.py  config.py  requirements.txt
backend/api/: document_routes.py
backend/services/: faiss_service.py  vector_db_service.py
backend/tests/: test_vector_db.py
backend/utils/: chunking.py  embeddings.py
frontend/: .env.example  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthForm.jsx  DocumentUpload.jsx  QueryInterface.jsx  ResultDisplay.jsx
frontend/src/pages/: DashboardPage.jsx  LandingPage.jsx  SignupPage.jsx
frontend/src/services/: api.js
notebooks/: 01_embeddings_analysis.ipynb
