[project]
name = "veridoc"
version = "0.1.0"
description = "Enterprise-grade Retrieval-Augmented Generation (RAG) system for verified document-based Q&A powered by LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Vishalkumarjaiswal16" },
]
keywords = [
    "rag",
    "llm",
    "document-qa",
    "retrieval-augmented-generation",
    "enterprise",
    "veridoc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# ── Core Dependencies ────────────────────────────────────────────────
dependencies = [
    # LLM & Embeddings
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "tiktoken>=0.8.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.25.0",
    # AWS Bedrock
    "boto3>=1.35.0",
    # Vector Databases
    "chromadb>=0.6.0",
    "faiss-cpu>=1.9.0",
    # PDF & Document Processing
    "pypdf>=6.6.2",
    "python-docx>=1.1.0",
    # Web Framework & API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    # Frontend / Prototyping
    "streamlit>=1.41.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Authentication & Security
    "pyjwt>=2.10.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.18",
    "bcrypt>=4.2.0",
    # Retrieval & Search
    "rank-bm25>=0.2.2",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    # Environment & Config
    "python-dotenv>=1.0.0",
    # Utilities
    "requests>=2.32.0",
    "aiofiles>=24.1.0",
    "pandas>=2.2.0",
]

# ── Optional / Extra Dependency Groups ───────────────────────────────
[project.optional-dependencies]
eval = [
    "ragas>=0.2.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "umap-learn>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/Vishalkumarjaiswal16/Veridoc"
Repository = "https://github.com/Vishalkumarjaiswal16/Veridoc"
Issues = "https://github.com/Vishalkumarjaiswal16/Veridoc/issues"

# ── Build System ─────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Veridoc"]

# ── Ruff (linter + formatter) ────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # allow assert in tests
    "S105",  # allow hardcoded passwords (env template)
]

[tool.ruff.lint.isort]
known-first-party = ["veridoc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests", "VeriDoc"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=VeriDoc",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "e2e: marks end-to-end tests",
]

# ── MyPy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "VeriDoc/frontend",
    "VeriDoc/.venv",
    "__pycache__",
]

# ── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["VeriDoc"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "VeriDoc/.venv/*",
    "VeriDoc/frontend/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
